--- a/macros.cfg
+++ b/macros.cfg
@@ -4,6 +4,7 @@ gcode:
     {% set extruder_temp = params.EXTRUDER | default(220) | float %}
 
     CLEAR_PAUSE                                     ; Clear Pause
+    SET_SKEW YZ=2.817,2.757,1.965                   ; YZ axis skew
     M190 S{bed_temp}                                ; Heat bed_temp and wait
     M104 S150                                       ; Preheat extruder to 150°C
     G28                                             ; Home all axes
