--- a/printer.cfg
+++ b/printer.cfg
@@ -44,7 +44,7 @@
 #####################################################################
 # Obtain definition by "ls -l /dev/serial/by-id/"
 #####################################################################
-serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
+serial: /dev/serial/by-path/pci-0000:00:15.0-usb-0:5:1.0-port0
 restart_method: command
 
 [temperature_sensor mcu_temp]
@@ -244,6 +244,10 @@ pin: PB0
 [gcode_arcs]
 
 [exclude_object]
+
+[skew_correction]
+#2.817  2.757 1.965
+
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
