inital MP Mini Delta

--- a/moonraker.conf
+++ b/moonraker.conf
@@ -11,6 +11,7 @@ trusted_clients:
     169.254.0.0/16
     172.16.0.0/12
     192.168.0.0/16
+    FC00::/7
     FE80::/10
     ::1/128
 cors_domains:
@@ -20,8 +21,7 @@ cors_domains:
     *://localhost:*
     *://my.mainsail.xyz
     *://app.fluidd.xyz
-    *kli.pper
-
+    
 [octoprint_compat]
 
 [history]
@@ -35,6 +35,8 @@ path: /home/seb/fluidd
 repo: fluidd-core/fluidd
 channel: stable
 type: web
+persistent_files:
+    config.json
 
 [update_manager fluidd-config]
 managed_services: klipper
