--- a/macros.cfg
+++ b/macros.cfg
@@ -1,45 +1,27 @@
 [gcode_macro PRINT_START]
 gcode:
-    {% set bed_temp = params.BED | default(60) | float %}
     {% set extruder_temp = params.EXTRUDER | default(220) | float %}
 
     CLEAR_PAUSE                                     ; Clear Pause
-    SET_SKEW YZ=2.817,2.757,1.965                   ; YZ axis skew
-    M190 S{bed_temp}                                ; Heat bed_temp and wait
-    M104 S150                                       ; Preheat extruder to 150°C
+    # M190 S{bed_temp}                                ; Heat bed_temp and wait
+    # M104 S{extruder_temp}                           ; Set final extruder temperature
     G28                                             ; Home all axes
-    BED_MESH_CALIBRATE ADAPTIVE=1 ADAPTIVE_MARGIN=5 ; Start Adaptive Bed Leveling 
-    G0 X1 Y1 Z1 F5000                               ; Move to front-left to heat nozzle
-    M109 S150                                       ; Set extruder temp and wait
-    PRTOUCH_PROBE_ZOFFSET
-    G0 X1 Y1 Z1 F5000                               ; Move to front-left to heat nozzle
-    M109 S{extruder_temp}                           ; Set extruder temp and wait
-    ADAPTIVE_LINE_PURGE                             ; Adaptive Purge
+    # BED_MESH_CALIBRATE ADAPTIVE=1 ADAPTIVE_MARGIN=5 ; Start Adaptive Bed Leveling 
+    G0 X0 Y0 Z10 F1000                               ; Move to front-left to heat nozzle
+    # M109 S{extruder_temp}                           ; Set extruder temp and wait
+    # ADAPTIVE_LINE_PURGE                             ; Adaptive Purge
 
 [gcode_macro PRINT_END]
 gcode:
-    G91                 ; Relative positionning
+    M106 S0             ; Turn-off fan
+    M104 S0             ; Turn-off hotend
+    G91                 ; Relative positioning
     G1 E-2 F2700        ; Retract a bit
     G1 E-2 Z0.2 F2400   ; Retract and raise Z
-    G0 X5 Y5 F3000      ; Wipe out
-    G0 Z10              ; Raise Z more
-    G90                 ; Absolute positionning
-    G0 X0 Y220          ; Present print
-    M106 S0             ; Turn-off fan
-    M104 S0             ; Turn-off hotend
-    M140 S0             ; Turn-off bed_temp
+    G90                 ; Absolute positioning
+    G0 X0 Y0 Z120       ; Present print
     M84                 ; Disable stepper motors
-
-[gcode_macro OFF]
-gcode:
-    M106 S0             ; Turn-off fan
-    M104 S0             ; Turn-off hotend
-    M140 S0             ; Turn-off bed_temp
-    M84                 ; Disable stepper motors
-
-[gcode_macro PROBE_ZOFFSET]
-gcode:
-    PRTOUCH_PROBE_ZOFFSET
+    SDCARD_RESET_FILE
 
 ############################################################################################################  
 #   Adaptive Line Purge Macro (Modified from https://github.com/kyleisah/Klipper-Adaptive-Meshing-Purging)
@@ -48,15 +30,15 @@ gcode:
 [gcode_macro ADAPTIVE_LINE_PURGE]
 variable_purge_height: 0.8  # Z position of nozzle during purge, default is 0.8 mm.
 variable_tip_distance: 4    # Distance in mm between tip of filament and nozzle before purge. Should be similar to PRINT_END final retract amount.
-variable_purge_margin: 25   # Distance the purge will be in front of the print area, default is 10 mm.
+variable_purge_margin: 10   # Distance the purge will be in front of the print area, default is 10 mm.
 variable_purge_amount: 20   # Amount of filament in mm to be purged prior to printing.
 variable_flow_rate: 12      # Flow rate of purge in mm3/s. Default is 12.
 gcode:
     {% set travel_speed = printer.toolhead.max_velocity * 60 %}
     {% set cross_section = printer.configfile.settings.extruder.max_extrude_cross_section | float %}
     
-    {% set RETRACT = 'G10' if printer.firmware_retraction is defined else 'G1 E-1 F2100' %}
-    {% set UNRETRACT = 'G11' if printer.firmware_retraction is defined else 'G1 E1 F2100' %}
+    {% set RETRACT = 'G10' if printer.firmware_retraction is defined else 'G1 E-0.5 F2100' %}
+    {% set UNRETRACT = 'G11' if printer.firmware_retraction is defined else 'G1 E0.5 F2100' %}
 
     {% set all_points = printer.exclude_object.objects | map(attribute='polygon') | sum(start=[]) %}    ; Get all object points
     {% set x_min = (all_points | map(attribute=0) | min | default(0)) %}                                ; Object x min
@@ -104,70 +86,12 @@ gcode:
         RESTORE_GCODE_STATE NAME=prepurge_state                                                 ; Restore gcode state
     {% endif %}
 
-[gcode_macro LOAD_FILAMENT]
-variable_load_distance = 40     # Distance to load filament into the extruder
-variable_purge_distance = 30    # Distance to purge filament after loading
+
+[gcode_macro OFF]
 gcode:
-    {% set load_speed = params.LOAD_SPEED | default(1500) | float %}
-    {% set purge_speed = params.PURGE_SPEED | default(300) | float %}
-    {% set min_temp = params.MIN_TEMP | default(220) | float %}
-    {% set turn_off_extruder = params.TURN_OFF_EXTRUDER | default(1) | int %}  ; Turn off extruder after loading (0/1)
-    
-    SAVE_GCODE_STATE NAME=load_state    ; Create gcode state
-
-    # Heat extruder to the minimum required temperature if necessary
-    {% if printer.extruder.temperature < min_temp %}
-        M109 S{min_temp} ; Set extruder temp and wait
-    {% endif %}
-
-    G91                                 ; Relative positioning
-    G92 E0                              ; Reset extruder
-    G1 E{load_distance} F{load_speed}   ; Load filament quickly
-    G1 E{purge_distance} F{purge_speed} ; Purge filament
-
-    # Optionally turn off the extruder heater after loading
-    {% if turn_off_extruder %}
-        M104 S0 ; Turn off extruder heater
-    {% endif %}
-
-    RESTORE_GCODE_STATE NAME=load_state ; Restore gcode state
-    M118 Filament Loaded                ; Notify completion
-
-[gcode_macro UNLOAD_FILAMENT]
-variable_unload_distance: 80    # Distance to retract filament from the extruder
-variable_purge_distance: 20     # Distance to purge filament before unloading
-gcode:
-    {% set unload_speed = params.UNLOAD_SPEED | default(1500) | float %}
-    {% set purge_speed = params.PURGE_SPEED | default(300) | float %}
-    {% set min_temp = params.MIN_TEMP | default(220) | float %}
-    {% set turn_off_extruder = params.TURN_OFF_EXTRUDER | default(1) | int %}  ; Turn off extruder after unloading (0/1)
-
-    SAVE_GCODE_STATE NAME=unload_state ; Save current printer state
-
-    # Heat extruder to the minimum required temperature if necessary
-    {% if printer.extruder.temperature < min_temp %}
-        M109 S{min_temp} ; Set extruder temp and wait
-    {% endif %}
-
-    G91                                     ; Enable relative positioning
-    G92 E0                                  ; Reset extruder position
-    G1 E{purge_distance} F{purge_speed}     ; Purge filament
-    G1 E-{unload_distance} F{unload_speed}  ; Unload filament
-
-    # Optionally turn off the extruder heater after unloading
-    {% if turn_off_extruder %}
-        M104 S0 ; Turn off extruder heater
-    {% endif %}
-
-    RESTORE_GCODE_STATE NAME=unload_state   ; Restore saved printer state
-    M118 Filament Unloaded                  ; Notify completion
-
-[gcode_macro BEEP]
-gcode:
-    {% set duration = params.P | default(100) | float %}
-    SET_PIN PIN=beeper VALUE=1
-    G4 P{duration}
-    SET_PIN PIN=beeper VALUE=0
+    M84                 ; Turn steppers off
+    TURN_OFF_HEATERS    ; Turn bed_temp / hotend off
+    M107                ; Turn print cooling fan off
 
 [gcode_macro PID_EXTRUDER]
 gcode:
@@ -192,15 +116,5 @@ gcode:
     
     M104 {% for p in params %} {'%s%s' % (p, params[p])} {% endfor %}   ; Set hotend temp
     {% if s != 0 %}
-        TEMPERATURE_WAIT SENSOR=extruder MINIMUM={s-1} MAXIMUM={s+10}      ; Wait for hotend temp (within 1 degree)
-    {% endif %}
-
-[gcode_macro M190]
-rename_existing: M99190
-gcode:
-    {% set s = params.S | float %}
-
-    M140 {% for p in params %} {'%s%s' % (p, params[p])} {% endfor %}   ; Set bed temp
-    {% if s != 0 %}
-        TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={s-1} MAXIMUM={s+1}    ; Wait for bed temp (within 1 degree)
+        TEMPERATURE_WAIT SENSOR=extruder MINIMUM={s-2} MAXIMUM={s+2}      ; Wait for hotend temp (within 1 degree)
     {% endif %}
