--- a/printer.cfg
+++ b/printer.cfg
@@ -1,291 +1,204 @@
-# Pin Mappings for Stock 2023 Creality Ender 3 V3 SE
-#
-# To use this configuration:
-# 1. During "make menuconfig", select:
-#    - STM32F103 with a "28KiB bootloader"
-#    - Serial communication on USART1 (PA10/PA9)
-#
-# 2. For a direct serial connection:
-#    - In "make menuconfig", select:
-#      - "Enable extra low-level configuration options"
-#      - Serial communication on USART3 (PB11/PB10)
-#    - This is accessible via the 10-pin IDC cable used for the LCD module:
-#      - Pin 3: Tx
-#      - Pin 4: Rx
-#      - Pin 9: GND
-#      - Pin 10: VCC
-#
-# 3. Build the firmware by running:
-#    - make
-#
-# 4. Flash the firmware:
-#    - Copy "klipper/out/klipper.bin" to an SD card.
-#    - Insert the SD card into the printer and power it on.
-#    - Ensure the firmware filename ends in ".bin" and is different from the last flashed filename.
-#
-# For further details, refer to https://www.klipper3d.org/Config_Reference.html.
-
-#####################################################################
-# Include the relevant configuration depending on what you are using.
-#####################################################################
 
 [include fluidd.cfg]
-# [include mainsail.cfg]
-
 [include macros.cfg]
+# This file contains common pin mappings for the 2017 Monoprice
+# Mini Delta. To use this config, the firmware should be compiled for the
+# STM32F070 microcontroller with an 8MHz crystal and USB for communication.
+#
+# IMPORTANT: Use of Kipper with a Monoprice Mini Delta requires a power supply
+# with a _minimum_ 120 W (i.e. 10 A) capacity! The stock power supply will not
+# work, as it can't power the hotend and the bed at the same time.
+#
+# Note 1: Some controller boards only trigger the bootloader when an update file
+# is "printed" from the LCD, rather than supporting bootloader triggering
+# during bootup. It may be preferable to use an ST-Link V2 to flash the
+# firmware instead. Follow this link for an example of the commands needed to
+# do this: https://github.com/arkorobotics/MiniDeltaBootloader
+#
+# Note 2: Klipper does not currently support the LCD interface used on this
+# printer.
+#
+# See docs/Config_Reference.md for a description of parameters.
 
-[include prtouch.cfg]
-
-[include display.cfg]
-
-# [include bigtreetech-adxl345.cfg]
-
-[mcu]
-#####################################################################
-# Obtain definition by "ls -l /dev/serial/by-id/"
-#####################################################################
-serial: /dev/serial/by-path/pci-0000:00:15.0-usb-0:5:1.0-port0
-restart_method: command
+[printer]
+kinematics: delta
+max_velocity: 150
+max_accel: 1200
+max_z_velocity: 100
+# minimum_z_position is negative to allow delta calibration to work
+minimum_z_position: -10.0
+#delta_radius: 63.00
 
 [temperature_sensor mcu_temp]
 sensor_type: temperature_mcu
 min_temp: 0
 max_temp: 100
 
-[temperature_sensor cpu_temp]
-sensor_type: temperature_host
-min_temp: 10
-max_temp: 100
-
-[printer]
-kinematics: cartesian
-max_velocity: 250
-max_accel: 3000
-minimum_cruise_ratio: 0.5
-square_corner_velocity: 5.0
-max_z_velocity: 100
-max_z_accel: 500
-
-[input_shaper]
-#shaper_freq_x: 60
-#shaper_type_x: ei
-#shaper_freq_y: 36
-#shaper_type_y: mzv
-
-#####################################################################
-#   X/Y Stepper Settings
-#####################################################################
-
-[stepper_x]
-step_pin: PC2
-dir_pin: !PB9
-enable_pin: !PC3
-microsteps: 64
-rotation_distance: 40
-endstop_pin: !PA5
-position_endstop: -6
-position_min: -6
-position_max: 230
-homing_speed: 30
-second_homing_speed: 5
-
-[tmc2209 stepper_x]
-uart_pin: PB12
-run_current: 0.6
-sense_resistor: 0.150
-stealthchop_threshold: 0
-interpolate: True
-
-[stepper_y]
-step_pin: PB8
-dir_pin: PB7
-enable_pin: !PC3
-microsteps: 64
-rotation_distance: 40
-endstop_pin: !PA6
-position_endstop: -14
-position_min: -14
-position_max: 225
-homing_speed: 30
-second_homing_speed: 5
-
-[tmc2209 stepper_y]
-uart_pin: PB13
-run_current: 0.6
-sense_resistor: 0.150
-stealthchop_threshold: 0
-interpolate: True
-
-#####################################################################
-#   Z Stepper Settings
-#####################################################################
-
-[stepper_z]
-step_pin: PB6
-dir_pin: !PB5
-enable_pin: !PC3
-microsteps: 64
-rotation_distance: 8
-endstop_pin: probe:z_virtual_endstop
-position_min: -3
-position_max: 200
+# Stepper A is the front-left tower, as originally wired. If you've rewired
+# your steppers to "correct" this, you'll need to swap these values.
+[stepper_a]
 homing_speed: 10
-second_homing_speed: 1
-homing_retract_dist: 2.5
+step_pin: PB12
+dir_pin: !PB11
+enable_pin: !PB10
+microsteps: 16
+rotation_distance: 28
+endstop_pin: ^PC14
+#position_endstop: 125.00
+#arm_length: 120.8
 
-[tmc2209 stepper_z]
-uart_pin: PB14
-run_current: 0.8
-sense_resistor: 0.150
-stealthchop_threshold: 0
-interpolate: True
+[stepper_b]
+step_pin: PB2
+dir_pin: !PB1
+enable_pin: !PB10
+microsteps: 16
+rotation_distance: 28
+endstop_pin: ^PC15
+#position_endstop: 125.00
 
-#####################################################################
-#   Extruder
-#####################################################################
+[stepper_c]
+step_pin: PB14
+dir_pin: !PB13
+enable_pin: !PB10
+microsteps: 16
+rotation_distance: 28
+endstop_pin: ^PC13
+#position_endstop: 125.00
 
 [extruder]
-step_pin: PB4
-dir_pin: PB3
-enable_pin: !PC3
+step_pin: PA7
+dir_pin: PA6
+enable_pin: !PB0
 microsteps: 16
-rotation_distance: 7.4714
+rotation_distance: 31.664
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 max_extrude_cross_section: 5
 max_extrude_only_distance: 500
-pressure_advance: 0.08
 heater_pin: PA1
+max_power: 0.5
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: PC5
+sensor_pin: PA0
+smooth_time: 1.5
+# calibrated at 240C on stock hardware
 #control: pid
-# Tuned for stock hardware with a target of 200 degrees Celsius.
-#pid_kp = 27.592
-#pid_ki = 1.383
-#pid_kd = 137.615
+#pid_Kp: 22.2
+#pid_Ki: 1.08
+#pid_Kd: 114
 min_temp: 0
-max_temp: 260
-
-#####################################################################
-#   Bed Heater
-#####################################################################
+max_temp: 250
+min_extrude_temp: 10
+max_power: 0.5
 
 [heater_bed]
-heater_pin: PB2
+heater_pin: PA5
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: PC4
+sensor_pin: PA4
+smooth_time: 3.0
+# calibrated at 70C on stock hardware
 #control: pid
-# Tuned for stock hardware with a target of 70 degrees Celsius.
-#pid_kp: 66.371
-#pid_ki: 0.846
-#pid_kd: 1301.702
+#pid_kp: 51.249
+#pid_ki: 4.437
+#pid_kd: 147.983
 min_temp: 0
 max_temp: 100
+max_power: 0.5
 
-#####################################################################
-#   Bed Mesh & BL Touch
-#####################################################################
+# Print cooling fan (omit section if fan not present)
+[heater_fan hotend_fan]
+pin: PA8
+fan_speed: 0.7
+cycle_time: 0.03
+shutdown_speed: 0.0
+
+[mcu]
+serial: /dev/serial/by-id/usb-Klipper_stm32f070xb_3C003D001851534835323720-if00
+restart_method: command
+
+
+[delta_calibrate]
+radius: 50
+speed: 50
+horizontal_move_z: 5
+
+######################################################################
+# Bed leveling support
+######################################################################
 
 [bed_mesh]
-speed: 150
-mesh_min: 10,10
-mesh_max: 206,210.5
-probe_count: 5, 5
-algorithm: bicubic
+speed: 50
+horizontal_move_z: 5
+mesh_radius: 50
+round_probe_count: 5
+fade_start: 1.0
+fade_end: 0.0
 
-[bltouch]
-sensor_pin: ^PC14
-control_pin: PC13
-stow_on_each_sample: False
-probe_with_touch_mode: True
-x_offset: -24.0
-y_offset: -14.5
-#z_offset: 0
-speed: 5
-samples: 2
+######################################################################
+# Bed probing hardware
+######################################################################
 
-#####################################################################
-#   Fan Control
-#####################################################################
+[probe]
+pin: ^!PB7
+x_offset: 0.0
+y_offset: 0.0
+z_offset: -0.1
+speed: 5.0
+samples: 1
+sample_retract_dist: 2.0
+samples_result: average
+samples_tolerance: 0.100
+samples_tolerance_retries: 0
 
-[heater_fan hotend_fan]
-pin: PC1
-fan_speed: 0.9
-
-[fan]
-pin: PA0
-
-#####################################################################
-#   Idle Timeout & Homing
-#####################################################################
-
-[idle_timeout]
-gcode:
-  OFF
-timeout: 600
-
-[safe_z_home]
-home_xy_position: 139, 127
-speed: 60
-z_hop: 10
-z_hop_speed: 5
-
-#####################################################################
-#   Beeper
-#####################################################################
-
-[output_pin beeper]
-pin: PB0
-
-#####################################################################
-#   G-Code features
-#####################################################################
-
-[gcode_arcs]
+[force_move]
+enable_force_move: True
 
 [exclude_object]
-
-[skew_correction]
-#2.817  2.757 1.965
-
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
+#*# [printer]
+#*# delta_radius = 63.100464
+#*#
+#*# [stepper_a]
+#*# angle = 210.719371
+#*# arm_length = 120.800000
+#*# position_endstop = 128.164789
+#*#
+#*# [stepper_b]
+#*# angle = 330.826144
+#*# arm_length = 120.800000
+#*# position_endstop = 127.372713
+#*#
+#*# [stepper_c]
+#*# angle = 90.000000
+#*# arm_length = 120.800000
+#*# position_endstop = 128.160373
+#*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 27.142
-#*# pid_ki = 1.340
-#*# pid_kd = 137.404
+#*# pid_kp = 9.624
+#*# pid_ki = 0.425
+#*# pid_kd = 54.497
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 62.793
-#*# pid_ki = 0.723
-#*# pid_kd = 1363.398
+#*# pid_kp = 23.647
+#*# pid_ki = 2.627
+#*# pid_kd = 53.206
 #*#
-#*# [bltouch]
-#*# z_offset = 1.305
-#*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	0.058750, 0.020000, -0.003750
-#*# 	0.032500, -0.015000, -0.027500
-#*# 	0.022500, -0.028750, -0.043750
-#*# x_count = 3
-#*# y_count = 3
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = lagrange
-#*# tension = 0.2
-#*# min_x = 97.482
-#*# max_x = 122.502
-#*# min_y = 97.482
-#*# max_y = 122.50200000000001
-#*#
-#*# [input_shaper]
-#*# shaper_type_x = ei
-#*# shaper_freq_x = 58.4
-#*# shaper_type_y = ei
-#*# shaper_freq_y = 36.0
+#*# [delta_calibrate]
+#*# height0 = -0.1
+#*# height0_pos = 14661.000,14565.000,14653.000
+#*# height1 = -0.1
+#*# height1_pos = 18117.000,17904.000,12735.000
+#*# height2 = -0.1
+#*# height2_pos = 14259.000,20174.000,14216.000
+#*# height3 = -0.1
+#*# height3_pos = 12822.000,17435.000,17471.000
+#*# height4 = -0.1
+#*# height4_pos = 14111.000,14073.000,18375.000
+#*# height5 = -0.1
+#*# height5_pos = 16937.000,12840.000,16966.000
+#*# height6 = -0.1
+#*# height6_pos = 19248.000,14041.000,14165.000
